--- a/_config.yml
+++ b/_config.yml
@@ -105,14 +105,14 @@ analytics:
 # Site Author
 author:
   name             : "Synith | Jordan Reed"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/bio-photo.png"
   bio              : "A **gameplay programmer** looking to help you build your next idea."
   location         : "Alberta, Canada"
   email            : "synith@live.ca"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url:  "mailto:synith@live.ca"
+      # url:  "mailto:synith@live.ca"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
@@ -140,7 +140,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url:  "https://synith.github.com/"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
