--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Synith | Jordan Reed"
-  avatar           : /assets/images/bio-photo.png"
+  avatar           : "/assets/images/bio-photo.png"
   bio              : "A **gameplay programmer** looking to help you build your next idea."
   location         : "Alberta, Canada"
   email            : "synith@live.ca"
