--- a/_config.yml
+++ b/_config.yml
@@ -113,9 +113,12 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url:  "mailto:mail@synith.dev"
-    - label: "Website"
+    - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://www.linkedin.com/in/synith//"
+    - label: "Portfolio"
+      icon: "fas fa-fw fa-link"
+      url: "https://synith.itch.io/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
