--- a/_config.yml
+++ b/_config.yml
@@ -143,7 +143,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url:  "https://synith.github.com/"
+      url:  "https://github.com/synith"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
