--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
-main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+#main:
+  #- title: "Quick-Start Guide"
+  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
@@ -11,11 +11,11 @@ main:
   # - title: "Sitemap"
   #   url: /sitemap/
 
-docs:
-  - title: Getting Started
-    children:
-      - title: "Quick-Start Guide"
-        url: "https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/"
+#docs:
+  #- title: Getting Started
+  #  children:
+      #- title: "Quick-Start Guide"
+      #  url: "https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/"
       #- title: "Structure"
       #  url: /docs/structure/
       #- title: "Installation"
